Fix search form presentation on small screens.

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -307,6 +307,7 @@ footer {
   border: solid 2px #d3d3d3;
   color: #333;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .search-field:hover,
@@ -320,6 +321,7 @@ footer {
   border: none;
   color: #fff;
   flex-shrink: 1;
+  margin-left: 0.2em;
 }
 
 .search-button:hover,
